Node: Express, rename the main file

--- a/vanillaJS/basic_express/package.json
+++ b/vanillaJS/basic_express/package.json
@@ -5,8 +5,8 @@
   "main": "src/app.js",
   "type": "module",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
+    "start": "node src/app_readChunkForBody.js",
+    "dev": "nodemon src/app_readChunkForBody.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
