--- a/vanillaJS/basic_express_movies_mvc/package.json
+++ b/vanillaJS/basic_express_movies_mvc/package.json
@@ -27,6 +27,7 @@
   "author": "mgallegoa",
   "license": "ISC",
   "dependencies": {
+    "cors": "2.8.5",
     "express": "4.21.1",
     "zod": "3.23.8"
   },
