--- a/vanillaJS/basic_express_movies_mvc/package.json
+++ b/vanillaJS/basic_express_movies_mvc/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.21.1",
+    "mongodb": "6.11.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
