--- a/vanillaJS/basic_express_jwt/package.json
+++ b/vanillaJS/basic_express_jwt/package.json
@@ -15,9 +15,11 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "db-local": "^3.1.0",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
