--- a/vanillaJS/basic_chat_sockets/package.json
+++ b/vanillaJS/basic_chat_sockets/package.json
@@ -15,7 +15,8 @@
   "description": "",
   "dependencies": {
     "express": "4.21.2",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "socket.io": "4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
